[project]
name = "blablador-watchdog"
version = "0.1.0"
description = "Monitor blablador model availability"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "python-dotenv",
    "textual",
    "aiosqlite",
    "pytest==9.0.3",
    "pygments==2.20.0",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "pytest",
]

[tool.uv]
dev-dependencies = [
    "flake8",
    "pytest",
]

[tool.flake8]
exclude = [".venv", "venv", "__pycache__", ".git"]
